[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/Laser.gd" type="Script" id=1]
[ext_resource path="res://graphics/holder.png" type="Texture" id=2]
[ext_resource path="res://objects/lasers/Laser1.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/lasers/AnimationPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://sounds/ballistic.wav" type="AudioStream" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 28 )

[node name="Laser" type="Node2D"]
script = ExtResource( 1 )

[node name="Holder" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Sprite" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -12 )

[node name="AnimationPlayer" parent="Sprite" instance=ExtResource( 4 )]

[node name="Reload" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -21.0
margin_top = 17.0
margin_right = 21.0
margin_bottom = 31.0
custom_styles/fg = SubResource( 1 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clickable" type="Area2D" parent="."]
position = Vector2( 0, 5 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Clickable"]
position = Vector2( 0, -3 )
shape = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
[connection signal="timeout" from="Reload" to="." method="_on_Reload_timeout"]
[connection signal="area_entered" from="Clickable" to="." method="_on_Clickable_area_entered"]
[connection signal="area_exited" from="Clickable" to="." method="_on_Clickable_area_exited"]
[connection signal="input_event" from="Clickable" to="." method="_on_Clickable_input_event"]
[connection signal="mouse_entered" from="Clickable" to="." method="_on_Clickable_mouse_entered"]
[connection signal="mouse_exited" from="Clickable" to="." method="_on_Clickable_mouse_exited"]
